// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VoteItem /> renders correcty for mitigated vote 1`] = `
<ListVoteItem
  id="vote-51"
>
  <Connect(UserAvatarDeprecated)
    className="pull-left"
    user={
      Object {
        "displayName": "lbrunet",
        "id": "user1",
        "media": Object {
          "url": "https://capco.dev/media/default/0001/01/32618f20c0942f89316be7f88d1bfa3489e2dcef.jpeg",
        },
        "slug": "lbrunet",
        "url": "https://capco.dev/profile/lbrunet",
        "vip": false,
      }
    }
  />
  <div
    className="opinion__data"
  >
    <p
      className="h5 opinion__user"
    >
      <UserLink
        className=""
        user={
          Object {
            "displayName": "lbrunet",
            "id": "user1",
            "media": Object {
              "url": "https://capco.dev/media/default/0001/01/32618f20c0942f89316be7f88d1bfa3489e2dcef.jpeg",
            },
            "slug": "lbrunet",
            "url": "https://capco.dev/profile/lbrunet",
            "vip": false,
          }
        }
      />
       
      <FormattedMessage
        id="votes.is"
        values={Object {}}
      />
       
      <span
        className="label label-warning"
      >
        <FormattedMessage
          id="votes.value.mitigated"
          values={Object {}}
        />
      </span>
       
      <FormattedMessage
        id="votes.type.proposition"
        values={Object {}}
      />
       
      <span
        className="excerpt  opinion__date"
      >
        <FormattedDate
          day="numeric"
          hour="numeric"
          minute="numeric"
          month="long"
          value={"2018-04-09T21:21:06.000Z"}
          year="numeric"
        />
      </span>
    </p>
  </div>
  <p>
    <a
      href="https://capco.dev/projects/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/titre-ier-la-circulation-des-donnees-et-du-savoir/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/article-1/versions/modification-2"
    >
      Modification 2
    </a>
  </p>
</ListVoteItem>
`;

exports[`<VoteItem /> renders correcty for vote against 1`] = `
<ListVoteItem
  id="vote-51"
>
  <Connect(UserAvatarDeprecated)
    className="pull-left"
    user={
      Object {
        "displayName": "lbrunet",
        "id": "user1",
        "media": Object {
          "url": "https://capco.dev/media/default/0001/01/32618f20c0942f89316be7f88d1bfa3489e2dcef.jpeg",
        },
        "slug": "lbrunet",
        "url": "https://capco.dev/profile/lbrunet",
        "vip": false,
      }
    }
  />
  <div
    className="opinion__data"
  >
    <p
      className="h5 opinion__user"
    >
      <UserLink
        className=""
        user={
          Object {
            "displayName": "lbrunet",
            "id": "user1",
            "media": Object {
              "url": "https://capco.dev/media/default/0001/01/32618f20c0942f89316be7f88d1bfa3489e2dcef.jpeg",
            },
            "slug": "lbrunet",
            "url": "https://capco.dev/profile/lbrunet",
            "vip": false,
          }
        }
      />
       
      <FormattedMessage
        id="votes.isNot"
        values={Object {}}
      />
       
      <span
        className="label label-danger"
      >
        <FormattedMessage
          id="votes.value.disagree"
          values={Object {}}
        />
      </span>
       
      <FormattedMessage
        id="votes.type.proposition"
        values={Object {}}
      />
       
      <span
        className="excerpt  opinion__date"
      >
        <FormattedDate
          day="numeric"
          hour="numeric"
          minute="numeric"
          month="long"
          value={"2018-04-09T21:21:06.000Z"}
          year="numeric"
        />
      </span>
    </p>
  </div>
  <p>
    <a
      href="https://capco.dev/projects/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/titre-ier-la-circulation-des-donnees-et-du-savoir/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/article-1/versions/modification-2"
    >
      Modification 2
    </a>
  </p>
</ListVoteItem>
`;

exports[`<VoteItem /> renders correcty for vote for 1`] = `
<ListVoteItem
  id="vote-51"
>
  <Connect(UserAvatarDeprecated)
    className="pull-left"
    user={
      Object {
        "displayName": "lbrunet",
        "id": "user1",
        "media": Object {
          "url": "https://capco.dev/media/default/0001/01/32618f20c0942f89316be7f88d1bfa3489e2dcef.jpeg",
        },
        "slug": "lbrunet",
        "url": "https://capco.dev/profile/lbrunet",
        "vip": false,
      }
    }
  />
  <div
    className="opinion__data"
  >
    <p
      className="h5 opinion__user"
    >
      <UserLink
        className=""
        user={
          Object {
            "displayName": "lbrunet",
            "id": "user1",
            "media": Object {
              "url": "https://capco.dev/media/default/0001/01/32618f20c0942f89316be7f88d1bfa3489e2dcef.jpeg",
            },
            "slug": "lbrunet",
            "url": "https://capco.dev/profile/lbrunet",
            "vip": false,
          }
        }
      />
       
      <FormattedMessage
        id="votes.is"
        values={Object {}}
      />
       
      <span
        className="label label-success"
      >
        <FormattedMessage
          id="votes.value.agree"
          values={Object {}}
        />
      </span>
       
      <FormattedMessage
        id="votes.type.proposition"
        values={Object {}}
      />
       
      <span
        className="excerpt  opinion__date"
      >
        <FormattedDate
          day="numeric"
          hour="numeric"
          minute="numeric"
          month="long"
          value={"2018-04-09T21:21:06.000Z"}
          year="numeric"
        />
      </span>
    </p>
  </div>
  <p>
    <a
      href="https://capco.dev/projects/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/titre-ier-la-circulation-des-donnees-et-du-savoir/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/article-1/versions/modification-2"
    >
      Modification 2
    </a>
  </p>
</ListVoteItem>
`;

exports[`<VoteItem /> renders correcty for vote without value 1`] = `
<ListVoteItem
  id="vote-51"
>
  <Connect(UserAvatarDeprecated)
    className="pull-left"
    user={
      Object {
        "displayName": "lbrunet",
        "id": "user1",
        "media": Object {
          "url": "https://capco.dev/media/default/0001/01/32618f20c0942f89316be7f88d1bfa3489e2dcef.jpeg",
        },
        "slug": "lbrunet",
        "url": "https://capco.dev/profile/lbrunet",
        "vip": false,
      }
    }
  />
  <div
    className="opinion__data"
  >
    <p
      className="h5 opinion__user"
    >
      <UserLink
        className=""
        user={
          Object {
            "displayName": "lbrunet",
            "id": "user1",
            "media": Object {
              "url": "https://capco.dev/media/default/0001/01/32618f20c0942f89316be7f88d1bfa3489e2dcef.jpeg",
            },
            "slug": "lbrunet",
            "url": "https://capco.dev/profile/lbrunet",
            "vip": false,
          }
        }
      />
       
      <FormattedMessage
        id="votes.has"
        values={Object {}}
      />
       
      <span
        className="label label-success"
      >
        <FormattedMessage
          id="votes.value.voteFor"
          values={Object {}}
        />
      </span>
       
      <FormattedMessage
        id="votes.type.proposition"
        values={Object {}}
      />
       
      <span
        className="excerpt  opinion__date"
      >
        <FormattedDate
          day="numeric"
          hour="numeric"
          minute="numeric"
          month="long"
          value={"2018-04-09T21:21:06.000Z"}
          year="numeric"
        />
      </span>
    </p>
  </div>
  <p>
    <a
      href="https://capco.dev/projects/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/titre-ier-la-circulation-des-donnees-et-du-savoir/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/article-1/versions/modification-2"
    >
      Modification 2
    </a>
  </p>
</ListVoteItem>
`;
